--- a/KSPersonalFinance/Source/Interfaces/Base.lproj/Main.storyboard
+++ b/KSPersonalFinance/Source/Interfaces/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15A284" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Y2i-jS-dSq">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="10117" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="Y2i-jS-dSq">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
@@ -237,7 +237,7 @@
                         <constraints>
                             <constraint firstItem="RIX-OX-qdg" firstAttribute="top" secondItem="hGZ-qT-aS6" secondAttribute="bottom" id="145-Us-TyE"/>
                             <constraint firstItem="bwe-yU-XVE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BaM-WC-qd1"/>
-                            <constraint firstAttribute="trailing" secondItem="bwe-yU-XVE" secondAttribute="trailing" id="Lic-ii-YBj"/>
+                            <constraint firstItem="bwe-yU-XVE" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Cbk-fq-bLc"/>
                             <constraint firstItem="RIX-OX-qdg" firstAttribute="top" secondItem="bwe-yU-XVE" secondAttribute="bottom" id="MSE-5N-d2S"/>
                             <constraint firstItem="hGZ-qT-aS6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MUJ-Bx-wMN"/>
                             <constraint firstItem="B5N-7C-BlI" firstAttribute="centerX" secondItem="bwe-yU-XVE" secondAttribute="centerX" id="PPk-ZN-6B9"/>
@@ -248,6 +248,16 @@
                     </view>
                     <toolbarItems/>
                     <navigationItem key="navigationItem" id="clv-pU-HYV">
+                        <barButtonItem key="leftBarButtonItem" style="plain" id="3fe-7R-gUk">
+                            <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" id="ccj-XV-ewi">
+                                <rect key="frame" x="16" y="7" width="71" height="30"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <state key="normal" title="Button"/>
+                                <connections>
+                                    <action selector="changeTransactionType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="XbN-vG-mMK"/>
+                                </connections>
+                            </button>
+                        </barButtonItem>
                         <barButtonItem key="rightBarButtonItem" style="plain" id="rrG-e3-w8C">
                             <button key="customView" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="et5-ez-cFd">
                                 <rect key="frame" x="274" y="7" width="30" height="30"/>
@@ -260,9 +270,11 @@
                         </barButtonItem>
                     </navigationItem>
                     <connections>
-                        <outlet property="bottomPosition" destination="MSE-5N-d2S" id="mOH-cU-Jkv"/>
                         <outlet property="calendarView" destination="AB3-c9-oT6" id="mbZ-j0-v25"/>
+                        <outlet property="changeTransactiontype" destination="ccj-XV-ewi" id="IU0-92-YZN"/>
                         <outlet property="inputTextField" destination="Pwm-EE-N1K" id="2j6-r2-MfR"/>
+                        <outlet property="numpadLeading" destination="BaM-WC-qd1" id="wBl-dU-IkY"/>
+                        <outlet property="numpadView" destination="bwe-yU-XVE" id="h5x-GN-vOT"/>
                         <outlet property="saveAmountButton" destination="B5N-7C-BlI" id="cG7-mr-iK1"/>
                         <outlet property="view" destination="8bC-Xf-vdC" id="AgO-ih-jug"/>
                     </connections>
@@ -283,8 +295,8 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eWX-3v-p9Y" customClass="MCPieChartView">
-                                <rect key="frame" x="26" y="104" width="268" height="318"/>
+                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eWX-3v-p9Y" customClass="VBPieChart">
+                                <rect key="frame" x="26" y="8" width="268" height="318"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
                         </subviews>
