--- a/KSPersonalFinance/Source/Interfaces/Base.lproj/Main.storyboard
+++ b/KSPersonalFinance/Source/Interfaces/Base.lproj/Main.storyboard
@@ -3,6 +3,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="10085"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="Constraints with non-1.0 multipliers" minToolsVersion="5.1"/>
     </dependencies>
     <scenes>
@@ -221,7 +222,7 @@
                                     <constraint firstItem="KRJ-u7-FX7" firstAttribute="top" secondItem="A6c-5c-OvD" secondAttribute="bottom" constant="2" id="tJl-B6-2D5"/>
                                 </constraints>
                             </view>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="AB3-c9-oT6" customClass="FSCalendar">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="AB3-c9-oT6" customClass="FSCalendar">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="242"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -236,14 +237,20 @@
                         <color key="backgroundColor" red="0.84501098100000005" green="1" blue="0.88887939289999995" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="RIX-OX-qdg" firstAttribute="top" secondItem="hGZ-qT-aS6" secondAttribute="bottom" id="145-Us-TyE"/>
+                            <constraint firstItem="AB3-c9-oT6" firstAttribute="top" secondItem="0hg-fr-fhf" secondAttribute="bottom" id="22C-BW-0fp"/>
                             <constraint firstItem="bwe-yU-XVE" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="BaM-WC-qd1"/>
                             <constraint firstItem="bwe-yU-XVE" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="Cbk-fq-bLc"/>
+                            <constraint firstItem="AB3-c9-oT6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KNc-Bf-Fyl"/>
                             <constraint firstItem="RIX-OX-qdg" firstAttribute="top" secondItem="bwe-yU-XVE" secondAttribute="bottom" id="MSE-5N-d2S"/>
                             <constraint firstItem="hGZ-qT-aS6" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="MUJ-Bx-wMN"/>
                             <constraint firstItem="B5N-7C-BlI" firstAttribute="centerX" secondItem="bwe-yU-XVE" secondAttribute="centerX" id="PPk-ZN-6B9"/>
+                            <constraint firstItem="hGZ-qT-aS6" firstAttribute="top" secondItem="AB3-c9-oT6" secondAttribute="bottom" constant="1" id="T2F-EU-K9H"/>
                             <constraint firstAttribute="trailing" secondItem="hGZ-qT-aS6" secondAttribute="trailing" id="YNb-Mp-ye8"/>
+                            <constraint firstItem="AB3-c9-oT6" firstAttribute="width" secondItem="8bC-Xf-vdC" secondAttribute="width" id="bz3-Fl-tX3"/>
                             <constraint firstItem="bwe-yU-XVE" firstAttribute="height" secondItem="hGZ-qT-aS6" secondAttribute="height" id="jvk-qR-HBF"/>
                             <constraint firstItem="B5N-7C-BlI" firstAttribute="top" secondItem="dOM-Jx-Rxv" secondAttribute="bottom" constant="9" id="l52-SM-7kt"/>
+                            <constraint firstItem="AB3-c9-oT6" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="xZD-zm-SeT"/>
+                            <constraint firstAttribute="trailing" secondItem="AB3-c9-oT6" secondAttribute="trailing" id="zxG-yl-DnI"/>
                         </constraints>
                     </view>
                     <toolbarItems/>
@@ -295,43 +302,67 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eWX-3v-p9Y" customClass="VBPieChart">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eWX-3v-p9Y" customClass="VBPieChart">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="302"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" fixedFrame="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6zc-y4-0xh">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6zc-y4-0xh">
                                 <rect key="frame" x="0.0" y="302" width="320" height="188"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="188" id="UOt-UY-XFq"/>
+                                </constraints>
                                 <prototypes>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="KSPieChartTableViewCell" id="5O0-aX-sRg" customClass="KSPieChartTableViewCell">
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5O0-aX-sRg" id="T2e-EP-Td9">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
-                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="awD-iu-WCJ">
-                                                    <rect key="frame" x="8" y="0.0" width="35.5" height="35.5"/>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="awD-iu-WCJ">
+                                                    <rect key="frame" x="8" y="0.0" width="36" height="36"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="36" id="o6s-2S-Uyv"/>
+                                                    </constraints>
                                                 </imageView>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35u-UQ-ZIC">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Amount" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="35u-UQ-ZIC">
                                                     <rect key="frame" x="233" y="11" width="69" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="69" id="Kj6-nZ-xsb"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Percent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OzP-gm-aU6">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Percent" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OzP-gm-aU6">
                                                     <rect key="frame" x="137" y="11" width="67" height="21"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" constant="67" id="hN8-iq-cqo"/>
+                                                    </constraints>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ynt-XL-gf5">
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Category" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ynt-XL-gf5">
                                                     <rect key="frame" x="51" y="11" width="73" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                    <color key="textColor" white="0.66666666666666663" alpha="1" colorSpace="calibratedWhite"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
+                                            <constraints>
+                                                <constraint firstItem="awD-iu-WCJ" firstAttribute="top" secondItem="T2e-EP-Td9" secondAttribute="top" id="0z0-N1-hMr"/>
+                                                <constraint firstAttribute="trailingMargin" secondItem="35u-UQ-ZIC" secondAttribute="trailing" constant="10" id="250-Ls-tgP"/>
+                                                <constraint firstItem="OzP-gm-aU6" firstAttribute="leading" secondItem="ynt-XL-gf5" secondAttribute="trailing" constant="13" id="EtP-8c-KPr"/>
+                                                <constraint firstItem="35u-UQ-ZIC" firstAttribute="leading" secondItem="OzP-gm-aU6" secondAttribute="trailing" constant="29" id="FS2-TX-1R9"/>
+                                                <constraint firstAttribute="bottomMargin" secondItem="awD-iu-WCJ" secondAttribute="bottom" constant="-0.5" id="PGg-oP-KKw"/>
+                                                <constraint firstItem="ynt-XL-gf5" firstAttribute="baseline" secondItem="OzP-gm-aU6" secondAttribute="baseline" id="dSo-mM-PeY"/>
+                                                <constraint firstItem="ynt-XL-gf5" firstAttribute="leading" secondItem="awD-iu-WCJ" secondAttribute="trailing" constant="7" id="mdf-lD-Ngo"/>
+                                                <constraint firstItem="ynt-XL-gf5" firstAttribute="centerY" secondItem="T2e-EP-Td9" secondAttribute="centerY" id="tu6-Kt-iPt"/>
+                                                <constraint firstItem="awD-iu-WCJ" firstAttribute="leading" secondItem="T2e-EP-Td9" secondAttribute="leadingMargin" id="usz-Zx-zOG"/>
+                                                <constraint firstItem="OzP-gm-aU6" firstAttribute="baseline" secondItem="35u-UQ-ZIC" secondAttribute="baseline" id="zPJ-ef-ne7"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                         <connections>
                                             <outlet property="amountLabel" destination="35u-UQ-ZIC" id="OPI-yO-fIO"/>
@@ -348,6 +379,17 @@
                             </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="eWX-3v-p9Y" firstAttribute="width" secondItem="gFJ-Dx-vkl" secondAttribute="width" id="6E1-bG-xid"/>
+                            <constraint firstItem="eWX-3v-p9Y" firstAttribute="leading" secondItem="gFJ-Dx-vkl" secondAttribute="leading" id="6co-P5-9NH"/>
+                            <constraint firstItem="eWX-3v-p9Y" firstAttribute="centerX" secondItem="gFJ-Dx-vkl" secondAttribute="centerX" id="OKV-K8-Xzx"/>
+                            <constraint firstItem="eWX-3v-p9Y" firstAttribute="top" secondItem="fhY-Md-XNM" secondAttribute="bottom" id="ZOd-tY-qF2"/>
+                            <constraint firstItem="6zc-y4-0xh" firstAttribute="centerX" secondItem="gFJ-Dx-vkl" secondAttribute="centerX" id="gdO-5l-q8T"/>
+                            <constraint firstItem="hp9-s2-peh" firstAttribute="top" secondItem="6zc-y4-0xh" secondAttribute="bottom" constant="14" id="mWe-HZ-YKQ"/>
+                            <constraint firstItem="6zc-y4-0xh" firstAttribute="top" secondItem="eWX-3v-p9Y" secondAttribute="bottom" id="nhU-TZ-e3c"/>
+                            <constraint firstItem="6zc-y4-0xh" firstAttribute="leading" secondItem="eWX-3v-p9Y" secondAttribute="leading" id="pAK-OW-Zcf"/>
+                            <constraint firstAttribute="trailing" secondItem="eWX-3v-p9Y" secondAttribute="trailing" id="zkU-an-gdV"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="R4e-AW-kdO"/>
                     <connections>
