--- a/KSPersonalFinance/Source/Interfaces/Base.lproj/Main.storyboard
+++ b/KSPersonalFinance/Source/Interfaces/Base.lproj/Main.storyboard
@@ -302,11 +302,43 @@
                         <rect key="frame" x="0.0" y="64" width="320" height="504"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="eWX-3v-p9Y" customClass="VBPieChart">
+                            <view contentMode="scaleToFill" ambiguous="YES" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="eWX-3v-p9Y" customClass="VBPieChart">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="302"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" ambiguous="YES" misplaced="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="D7b-oD-pyK">
+                                        <rect key="frame" x="119" y="29" width="94" height="21"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="74" id="0gT-dE-o3a"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xgq-hi-3Aj">
+                                        <rect key="frame" x="8" y="8" width="99" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yU0-ie-Ors">
+                                        <rect key="frame" x="195" y="4" width="46" height="30"/>
+                                        <state key="normal" title="Button"/>
+                                        <connections>
+                                            <action selector="selectDateButtonPressed:" destination="2MM-JK-oq3" eventType="touchUpInside" id="y8o-Mp-Z9g"/>
+                                        </connections>
+                                    </button>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NxP-Xq-NhQ">
+                                        <rect key="frame" x="40" y="29" width="240" height="207"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="207" id="Twz-DC-ubw"/>
+                                        </constraints>
+                                        <color key="sectionIndexBackgroundColor" red="1" green="0.93177873010000001" blue="0.41594251529999998" alpha="1" colorSpace="calibratedRGB"/>
+                                    </tableView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6zc-y4-0xh">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="6zc-y4-0xh">
                                 <rect key="frame" x="0.0" y="302" width="320" height="188"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
@@ -317,7 +349,7 @@
                                         <rect key="frame" x="0.0" y="28" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="5O0-aX-sRg" id="T2e-EP-Td9">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="320" height="43.5"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="awD-iu-WCJ">
@@ -380,21 +412,23 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="eWX-3v-p9Y" firstAttribute="width" secondItem="gFJ-Dx-vkl" secondAttribute="width" id="6E1-bG-xid"/>
-                            <constraint firstItem="eWX-3v-p9Y" firstAttribute="leading" secondItem="gFJ-Dx-vkl" secondAttribute="leading" id="6co-P5-9NH"/>
-                            <constraint firstItem="eWX-3v-p9Y" firstAttribute="centerX" secondItem="gFJ-Dx-vkl" secondAttribute="centerX" id="OKV-K8-Xzx"/>
+                            <constraint firstItem="eWX-3v-p9Y" firstAttribute="trailing" secondItem="6zc-y4-0xh" secondAttribute="trailing" id="H3m-sH-9Pg"/>
                             <constraint firstItem="eWX-3v-p9Y" firstAttribute="top" secondItem="fhY-Md-XNM" secondAttribute="bottom" id="ZOd-tY-qF2"/>
                             <constraint firstItem="6zc-y4-0xh" firstAttribute="centerX" secondItem="gFJ-Dx-vkl" secondAttribute="centerX" id="gdO-5l-q8T"/>
                             <constraint firstItem="hp9-s2-peh" firstAttribute="top" secondItem="6zc-y4-0xh" secondAttribute="bottom" constant="14" id="mWe-HZ-YKQ"/>
                             <constraint firstItem="6zc-y4-0xh" firstAttribute="top" secondItem="eWX-3v-p9Y" secondAttribute="bottom" id="nhU-TZ-e3c"/>
                             <constraint firstItem="6zc-y4-0xh" firstAttribute="leading" secondItem="eWX-3v-p9Y" secondAttribute="leading" id="pAK-OW-Zcf"/>
-                            <constraint firstAttribute="trailing" secondItem="eWX-3v-p9Y" secondAttribute="trailing" id="zkU-an-gdV"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="R4e-AW-kdO"/>
                     <connections>
+                        <outlet property="currentMonthLabel" destination="Xgq-hi-3Aj" id="4jW-8u-aoq"/>
                         <outlet property="pieChartView" destination="eWX-3v-p9Y" id="iWe-J1-uBk"/>
+                        <outlet property="selectDateButton" destination="yU0-ie-Ors" id="rKy-YS-dK9"/>
+                        <outlet property="selectMonthTableView" destination="NxP-Xq-NhQ" id="gGM-0e-JAf"/>
                         <outlet property="tableView" destination="6zc-y4-0xh" id="cfu-aF-c0h"/>
+                        <outlet property="tableViewHeight" destination="Twz-DC-ubw" id="nuz-ox-aof"/>
+                        <outlet property="transactionSumLabel" destination="D7b-oD-pyK" id="O1x-cV-pfM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="D47-2s-uEz" userLabel="First Responder" sceneMemberID="firstResponder"/>
