--- a/KSPersonalFinance/Source/Interfaces/Base.lproj/Main.storyboard
+++ b/KSPersonalFinance/Source/Interfaces/Base.lproj/Main.storyboard
@@ -271,7 +271,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button" image="pieChart"/>
                                 <connections>
-                                    <segue destination="2MM-JK-oq3" kind="push" identifier="" id="L8b-te-jxz"/>
+                                    <segue destination="2MM-JK-oq3" kind="push" identifier="pieChartVC" id="L8b-te-jxz"/>
                                 </connections>
                             </button>
                         </barButtonItem>
@@ -315,7 +315,7 @@
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Xgq-hi-3Aj">
-                                        <rect key="frame" x="8" y="8" width="99" height="21"/>
+                                        <rect key="frame" x="13" y="8" width="99" height="21"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                         <nil key="highlightedColor"/>
@@ -327,14 +327,6 @@
                                             <action selector="selectDateButtonPressed:" destination="2MM-JK-oq3" eventType="touchUpInside" id="y8o-Mp-Z9g"/>
                                         </connections>
                                     </button>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" ambiguous="YES" misplaced="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="NxP-Xq-NhQ">
-                                        <rect key="frame" x="40" y="29" width="240" height="207"/>
-                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                        <constraints>
-                                            <constraint firstAttribute="height" constant="207" id="Twz-DC-ubw"/>
-                                        </constraints>
-                                        <color key="sectionIndexBackgroundColor" red="1" green="0.93177873010000001" blue="0.41594251529999998" alpha="1" colorSpace="calibratedRGB"/>
-                                    </tableView>
                                 </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </view>
@@ -420,14 +412,14 @@
                             <constraint firstItem="6zc-y4-0xh" firstAttribute="leading" secondItem="eWX-3v-p9Y" secondAttribute="leading" id="pAK-OW-Zcf"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" id="R4e-AW-kdO"/>
+                    <navigationItem key="navigationItem" id="R4e-AW-kdO">
+                        <barButtonItem key="leftBarButtonItem" image="back_" id="Ya2-TQ-hlX"/>
+                    </navigationItem>
                     <connections>
                         <outlet property="currentMonthLabel" destination="Xgq-hi-3Aj" id="4jW-8u-aoq"/>
                         <outlet property="pieChartView" destination="eWX-3v-p9Y" id="iWe-J1-uBk"/>
                         <outlet property="selectDateButton" destination="yU0-ie-Ors" id="rKy-YS-dK9"/>
-                        <outlet property="selectMonthTableView" destination="NxP-Xq-NhQ" id="gGM-0e-JAf"/>
                         <outlet property="tableView" destination="6zc-y4-0xh" id="cfu-aF-c0h"/>
-                        <outlet property="tableViewHeight" destination="Twz-DC-ubw" id="nuz-ox-aof"/>
                         <outlet property="transactionSumLabel" destination="D7b-oD-pyK" id="O1x-cV-pfM"/>
                     </connections>
                 </viewController>
